alignment fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    text-align: center;
     background-color: #7C93C3;
     color: #E1D7B7;
     font-family: "New Amsterdam", sans-serif;
